# llsollu-email-agent

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  security.py
backend/app/api/routes/: __init__.py  agents.py  auth.py  projects.py  scheduler.py  templates.py  webhooks.py
backend/app/auth/: deps.py
backend/app/framework/: base.py  context.py  registry.py
backend/app/models/: __init__.py  agent.py  base.py  email_log.py  issue.py  llm_job.py  project.py  run.py  schedule.py  sent_record.py  user.py
backend/app/schemas/: models.py
backend/app/services/: crypto.py  graph.py  llm.py  queue.py
backend/app/templates/mail_scheduler/: __init__.py  email_builder.py  schedule_matcher.py  template.py  xlsx.py
backend/app/templates/project_tracker/: __init__.py  prompts.py  template.py
backend/app/tools/: genkey.py  init_db.py
backend/app/workers/: tasks.py  worker.py
deploy/: docker-compose.yml
docs/: 01-architecture.md  02-agent-framework.md  03-data-model.md  04-user-flow.md  05-roadmap.md  06-constraints-and-risks.md  07-react-tauri-migration.md
frontend/: README.md  pubspec.yaml
frontend-react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  index.css  main.tsx
frontend-react/src-tauri/: tauri.conf.json
frontend-react/src/components/: AnimatedBg.tsx  ThemeToggle.tsx  ViewHeader.tsx
frontend/lib/: config.dart  main.dart  theme.dart
frontend/test/: widget_test.dart
(+26 files in other folders)
