[project]
name = "llsollu-email-agent"
version = "0.1.0"
description = "LLSOLLU multi-tenant email agent platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "arq>=0.26",
    "redis>=5.2",
    "croniter>=3.0",
    "httpx>=0.27",
    "openai>=1.54",
    "cryptography>=43.0",
    "openpyxl>=3.1",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
